<resources>

    <string name="app_name">LemHMI</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="initial_value">0</string>
    <string name="humidity">"Umidade: "</string>
    <string name="temperature">"Temperatura: "</string>
    <string name="connect_bluetooth">Conectar bluetooth</string>
    <string name="title_paired_devices">Dispositivos pareados</string>
    <string name="title_other_devices">Outros dispositivos</string>
    <string name="button_scan">Procurar dispositivos</string>
    <string name="none_paired">Não há dispositivos pareados</string>
    <string name="scanning">Procurando dispositivos…</string>
    <string name="none_found">Dispositivos não encontrados</string>
    <string name="select_device">Selecione um dispositivo para conectar</string>
    <string name="bluetooth_state">Estado</string>

</resources>